tests/paczka1/fuzzy1/61874727.err
Error in line 3: aFoFWLcp3LS A701 20,3
Error in line 8: BBpLjvx A372 97,8
Error in line 19: BBpLjvx A782 -2,4
Error in line 23: A782 A782 64,9
Error in line 26: SBezv5 A782 48,76
Error in line 29: 2QZtqZ23ez A701 67,8
